--- a/source/_posts/chat/做了一个很久没敢做的事情.md
+++ b/source/_posts/chat/做了一个很久没敢做的事情.md
@@ -22,15 +22,13 @@ tags:
 
 我创建了一个知识星球。有别于微信群的实时交流，目前来看这是只是沉淀最好的一种方式了。
 
-<img src="https://my-blog-to-use.oss-cn-beijing.aliyuncs.com/2019-11/知识星球-guide.png" style="zoom:50%;" />
-
 我创建知识星球主要是为了 **加深和大家的交流以及将自己觉得不错的知识沉淀下来** 。微信群在这方面太不好友好了，微信群只适合用来实时交流。我无法保证知识星球的球友的问题我都能回答或者说我都有能力/时间回答，我可以保证的是我输出在知识星球的一些内容对大家肯定是帮助的。
 
-知识星球的最低定价是 50，我觉得太贵了，并不是说这个星球的价值不止这个数，我觉得价值远超，真的远超。所以，我就申请了 33 元的优惠卷。
+知识星球的最低定价是 50，我觉得太贵了，并不是说这个星球的价值不止这个数，我觉得价值远超，真的远超。所以，我就申请了 33 元的优惠卷，优惠卷地址：[https://t.zsxq.com/iIqZBUR](https://t.zsxq.com/iIqZBUR) 。
 
 另外，没有创建免费的原因是为了提高进入的标准，17 元的定价（平台还会抽取一部分）于我来说并不是为了赚钱。我发的福利可能都远远超过这个数。
 
-<img src="https://my-blog-to-use.oss-cn-beijing.aliyuncs.com/2019-11/javaguide-知识圈海报.png" style="zoom:50%;" />
+<img src="https://my-blog-to-use.oss-cn-beijing.aliyuncs.com/2019-11/javaguide-读者圈.png" style="zoom:50%;" />
 
 开春来了之后，可以预知的是有大量程序员或者准程序要面临找工作/找实习，很多是被辞退的（在我看来因为个人能力辞退的占少部分，大部分还是由于公司的一些变动），很多是向去追求自己更满意的工作的俗称跳槽。
 
